--- a/pano/index.html
+++ b/pano/index.html
@@ -38,7 +38,8 @@
 	
 			// create the panorama player with the container
 			pano=new pano2vrPlayer("container");
-			pano.readConfigUrl("thumb_out.xml");			
+			pano.readConfigUrl("/upload/device_info/1/thumb_out.xml");
+			//pano.readConfigUrl("thumb_out.xml");			
 			
 			// create the panorama player with the container
 			pano2=new pano2vrPlayer("container2");
