--- a/jtree-example.html
+++ b/jtree-example.html
@@ -301,8 +301,8 @@
 
         var defaultData = [
           {
-            text: 'Parent 1',
-            href: '#parent1',
+            text: '<a href="localhost:8001/adminpanel/project/index">Parent 1</a>',
+            href: '',
             tags: ['4'],
             nodes: [
               {
