--- a/jtree-example.html
+++ b/jtree-example.html
@@ -50,47 +50,7 @@
 
         </div>
       </div>
-      <div class="row">
-        <hr>
-        <h2>Searchable Tree</h2>
-        <div class="col-sm-4">
-          <h2>Input</h2>
-          <!-- <form> -->
-            <div class="form-group">
-              <label for="input-search" class="sr-only">Search Tree:</label>
-              <input type="input" class="form-control" id="input-search" placeholder="Type to search..." value="">
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" class="checkbox" id="chk-ignore-case" value="false">
-                Ignore Case
-              </label>
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" class="checkbox" id="chk-exact-match" value="false">
-                Exact Match
-              </label>
-            </div>
-            <div class="checkbox">
-              <label>
-                <input type="checkbox" class="checkbox" id="chk-reveal-results" value="false">
-                Reveal Results
-              </label>
-            </div>
-            <button type="button" class="btn btn-success" id="btn-search">Search</button>
-            <button type="button" class="btn btn-default" id="btn-clear-search">Clear</button>
-          <!-- </form> -->
-        </div>
-        <div class="col-sm-4">
-          <h2>Tree</h2>
-          <div id="treeview-searchable" class=""></div>
-        </div>
-        <div class="col-sm-4">
-          <h2>Results</h2>
-          <div id="search-output"></div>
-        </div>
-      </div>
+      
       <div class="row">
         <hr>
         <h2>Selectable Tree</h2>
@@ -129,163 +89,6 @@
         <div class="col-sm-4">
           <h2>Events</h2>
           <div id="selectable-output"></div>
-        </div>
-      </div>
-      <div class="row">
-        <hr>
-        <h2>Expandible Tree</h2>
-        <div class="col-sm-4">
-          <h2>Input</h2>
-          <div class="form-group">
-            <label for="input-expand-node" class="sr-only">Search Tree:</label>
-            <input type="input" class="form-control" id="input-expand-node" placeholder="Identify node..." value="Parent 1">
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" class="checkbox" id="chk-expand-silent" value="false">
-              Silent (No events)
-            </label>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-6">
-              <button type="button" class="btn btn-success expand-node" id="btn-expand-node">Expand Node</button>
-            </div>
-            <div class="col-sm-6">
-              <select class="form-control" id="select-expand-node-levels">
-                <option>1</option>
-                <option>2</option>
-              </select>
-            </div>
-          </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-danger expand-node" id="btn-collapse-node">Collapse Node</button>
-          </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-primary expand-node" id="btn-toggle-expanded">Toggle Node</button>
-          </div>
-          <hr>
-          <div class="form-group row">
-            <div class="col-sm-6">
-              <button type="button" class="btn btn-success" id="btn-expand-all">Expand All</button>
-            </div>
-            <div class="col-sm-6">
-              <select class="form-control" id="select-expand-all-levels">
-                <option>1</option>
-                <option>2</option>
-              </select>
-            </div>
-          </div>
-          <button type="button" class="btn btn-danger" id="btn-collapse-all">Collapse All</button>
-        </div>
-        <div class="col-sm-4">
-          <h2>Tree</h2>
-          <div id="treeview-expandible" class=""></div>
-        </div>
-        <div class="col-sm-4">
-          <h2>Events</h2>
-          <div id="expandible-output"></div>
-        </div>
-      </div>
-      <div class="row">
-        <hr>
-        <h2>Checkable Tree</h2>
-        <div class="col-sm-4">
-          <h2>Input</h2>
-          <div class="form-group">
-            <label for="input-check-node" class="sr-only">Search Tree:</label>
-            <input type="input" class="form-control" id="input-check-node" placeholder="Identify node..." value="Parent 1">
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" class="checkbox" id="chk-check-silent" value="false">
-              Silent (No events)
-            </label>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-6">
-              <button type="button" class="btn btn-success check-node" id="btn-check-node">Check Node</button>
-            </div>
-          </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-danger check-node" id="btn-uncheck-node">Uncheck Node</button>
-          </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-primary check-node" id="btn-toggle-checked">Toggle Node</button>
-          </div>
-          <hr>
-          <div class="form-group row">
-            <div class="col-sm-6">
-              <button type="button" class="btn btn-success" id="btn-check-all">Check All</button>
-            </div>
-          </div>
-          <button type="button" class="btn btn-danger" id="btn-uncheck-all">Uncheck All</button>
-        </div>
-        <div class="col-sm-4">
-          <h2>Tree</h2>
-          <div id="treeview-checkable" class=""></div>
-        </div>
-        <div class="col-sm-4">
-          <h2>Events</h2>
-          <div id="checkable-output"></div>
-        </div>
-      </div>
-      <div class="row">
-        <hr>
-        <h2>Disabled Tree</h2>
-        <div class="col-sm-4">
-          <h2>Input</h2>
-          <div class="form-group">
-            <label for="input-disable-node" class="sr-only">Search Tree:</label>
-            <input type="input" class="form-control" id="input-disable-node" placeholder="Identify node..." value="Parent 1">
-          </div>
-          <div class="checkbox">
-            <label>
-              <input type="checkbox" class="checkbox" id="chk-disable-silent" value="false">
-              Silent (No events)
-            </label>
-          </div>
-          <div class="form-group row">
-            <div class="col-sm-6">
-              <button type="button" class="btn btn-success disable-node" id="btn-disable-node">Disable Node</button>
-            </div>
-          </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-danger disable-node" id="btn-enable-node">Enable Node</button>
-          </div>
-          <div class="form-group">
-            <button type="button" class="btn btn-primary disable-node" id="btn-toggle-disabled">Toggle Node</button>
-          </div>
-          <hr>
-          <div class="form-group row">
-            <div class="col-sm-6">
-              <button type="button" class="btn btn-success" id="btn-disable-all">Disable All</button>
-            </div>
-          </div>
-          <button type="button" class="btn btn-danger" id="btn-enable-all">Enable All</button>
-        </div>
-        <div class="col-sm-4">
-          <h2>Tree</h2>
-          <div id="treeview-disabled" class=""></div>
-        </div>
-        <div class="col-sm-4">
-          <h2>Events</h2>
-          <div id="disabled-output"></div>
-        </div>
-      </div>
-      <div class="row">
-        <hr>
-        <h2>Data</h2>
-        <div class="col-sm-4">
-          <h2>JSON Data</h2>
-          <div id="treeview12" class=""></div>
-        </div>
-        <div class="col-sm-4">
-          <h2></h2>
-          <div id="treeview13" class=""></div>
-        </div>
-        <div class="col-sm-4">
-          <h2></h2>
-          <div id="treeview14"></div>
         </div>
       </div>
       <br/>
@@ -648,6 +451,7 @@
           showCheckbox: true,
           onNodeChecked: function(event, node) {
             $('#checkable-output').prepend('<p>' + node.text + ' was checked</p>');
+            window.href('localhost:8001/adminpanel/manage/index');
           },
           onNodeUnchecked: function (event, node) {
             $('#checkable-output').prepend('<p>' + node.text + ' was unchecked</p>');
